--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
+<! DOCTYPE html>
+<html>
+    <head>
+         <title>Andrew Fanpage!</title>
+    </head>
+    <body style = "background-color: paleturquoise;">
+        <h1 style = "font-family:Georgia;color:darkblue;">Welcome to my Andrew Fanpage!</h1>
+        <h3 style = "font-family:Georgia;color:orange;">Andrew Michael Borgie is an absolutely epic person. Here are some INTERESTING facts about him.</h3>
+            <img src="IMG_2830.jpg" width = "200" height = "200">
+        <h3>Random facts about Andrew:</h3>
+         <u1><li>He loves Boston (Red Sox!!!) and used to live there.</li>
+         <li>His favorite sport is baseball and he loves to work out.</li>
+         <li>He is big brain (very very smart) and is interested in computers.</li></u1>
+         <o1><li>He enjoys playing cello and has a kinda boss music taste</li>
+         <li>He is kinda obsessed with the California Burritos from Clayton's Mexican Take Out</li></o1>
+         <table>
+            <tr>
+        <img src = "IMG_2831.jpg">
+        <h2>Andrew's Thoughts on:</h2>
+        </select>
+        <table>
+            <tr>
+                <td><u><b>Topic</td></u></b>
+                <td><u><b>Thoughts</td></u></b>
+            </tr>
+            <tr>
+                <td>Avocados</td>
+                <td>"Only good if they are mashed up..guac!"</td>
+            </tr>
+            <tr>
+                <td>Kittens</td>
+                <td>"Disgusting. Dogs. Just Dogs. Better."</td>
+            </tr>
+            <tr>
+                <td>The Month of September</td>
+                <td>"Ew cause of school"</td>
+            </tr>
+            <tr>
+                <td>The Color Purple</td>
+                <td>"Only good cause I used to wear it all the time"</td>
+            </tr>
+            <tr>
+                <td>Shrek</td>
+                <td>"Never seen it"</td>
+            </tr>
+            <tr>
+                <td>Mechanical Pencils</td>
+                <td>"Better than normal pencils"</td>
+            </tr>
+            <tr>
+                <td>These questions </td>
+                <td>"Bad"</td>
+            </tr>
+        </table>
+    <img src="IMG_2832.jpg" width="200" height="200">
+    <h2>A Debated Topic</h2>
+    <h3>The toads from Mario Kart are clearly superior to the other characters in the video game. However, which toad is better? Yellow or Blue? The answer is clearly yellow, though Andrew believes blue toad is the best. For more information on this "debate," click the link below.</h3>
+        <a href = "second.html">Andrew's (Incorrect) Take On Blue Toad vs. Yellow Toad on Mario Kart</a>
+    <img src="IMG_2833.jpg" width="200" height="200">
+    <h2>Thanks for Visiting My Fan Page For This Bot!</h2>
+        <h3 style = "font-family:Georgia;color:orange;">What would you like to know more about Andrew?</h3>
+        <select>
+            <option value="Favorite colors">Favorite colors</option>
+            <option value="Favorite clothing brand">Favorite clothing brand</option>
+            <option value="Favorite video game">Favorite video game</option>
+    </select>
+        <a href="https://jackiseverywhere.wixsite.com/baseball/andrew-borgie">
+    <h3>More awesome photos of this legendary person :)</h3></a>
+    </body>
 
+</html>
